--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+.main{
+  width: 100%;
+  height: 100vh;
+  border: 3px solid transparent;
+  background:  #f4d03f         ;
+}
+.child{
+  width: 40%;
+  padding: 1rem 0;
+  margin: -120px auto;
+  /* border: 3px solid black; */
+  border-radius: 15px 0 15px 0;
+  text-align: center;
+  background:  #f4d03f;
+}
+.todoimg{
+  width: 80px;
+  height: 60px;
+ 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn{
+  width: 25%;
+  margin: 20px auto;
+  background: red;
+  border: 2px solid black;
+}
+.add_item{
+  background: white;
+  border-radius: 12px;
+  width: 50%;
+  margin: auto;
+
+}
+
+.far{
+margin: 0 30px;
+color:  #1a5276 ;
+}
+.far:hover{
+  margin: 0 30px;
+  color:  #e90606 ;
+  cursor: pointer;
+  }
+
+.add{
+  margin: auto;
+  width: 10%;
+  color: green;
+  cursor: pointer;
+}
+.item{
+  background: white;
+  border-radius: 12px;
+  width: 50%;
+  margin: 1rem auto;
+  font-family: 'Merienda', cursive;
+}
+.item:hover{
+  background: #f6ddcc  ;
+  border-radius: 12px;
+  width: 50%;
+  margin: 1rem auto;
+  font-family: 'Merienda', cursive;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 780px) {
+  .add_item{
+    background: white;
+    width: 100%;
+    margin: auto;
+  }
+  .main{
+    width: 100%;
+    height: 100vh;
+    border: 3px solid transparent;
+    background:  #f8c471    ;
+  }
+  .child{
+    width: 70%;
+    padding: 1rem 0;
+    margin: 2rem auto;
+    border: 3px solid transparent;
+    text-align: center;
+  }
+  .add{
+    margin: auto;
+    width: 20%;
+    color: green;
+  }
+  .btn{
+    width: 50%;
+    margin: 20px auto;
+    background: red;
+    border: 2px solid black;
+  }
+  .item{
+    width: 50%;
+    margin: 1rem auto;
+    width: 100%;
+  }
+ 
 }
